# rag-system

./: .env.example  .gitignore  Dockerfile  SETUP.md  config.py  docker-compose.yml  ingest.py  ingest_figures.py  pyproject.toml  reingest_test.py  sanity_check.py  test_single_ingest.py
agent/: graph.py  prompts.py  state.py
agent/nodes/: decomposer.py  generator.py  retriever.py  verifier.py
api/: exceptions.py  main.py  middleware.py  schemas.py
api/routes/: auth.py  ingest.py  metrics.py  query.py
api/templates/: index.html
evaluation/: ragas_eval.py  test_queries.json
ingestion/: chunker.py  embedder.py  figure_describer.py  fingerprint.py  ingestor.py  pdf_parser.py  sparse_encoder.py
retrieval/: contextual_compressor.py  filters.py  hybrid_retriever.py  hyde.py  mmr.py  nli_scorer.py  page_renderer.py  qdrant_client.py  rag_fusion.py  reranker.py  sentence_window.py  step_back.py
