[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
    "ingestion",
    "retrieval",
    "agent",
    "api",
    "evaluation",
]

[project]
name = "rag-system"
version = "0.1.0"
description = "Production-grade Agentic RAG over multimodal PDFs"
requires-python = ">=3.11,<3.14"
dependencies = [
    # --- Core ---
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",

    # --- LLM / Embeddings ---
    "openai>=1.30.0",
    "tenacity>=8.3.0",

    # --- LangChain / LangGraph ---
    "langchain>=0.2.0",
    "langchain-openai>=0.1.0",
    "langchain-experimental>=0.0.59",
    "langgraph>=0.1.0",

    # --- Vector DB ---
    "qdrant-client>=1.9.0",
    "fastembed>=0.3.0",

    # --- PDF Parsing ---
    "pdfplumber>=0.11.0",
    "pymupdf>=1.24.0",
    "pillow>=10.3.0",

    # --- Re-ranking ---
    "sentence-transformers>=3.0.0",

    # --- Evaluation ---
    "ragas>=0.1.9",
    "datasets>=2.19.0",

    # --- Logging ---
    "structlog>=24.2.0",

    # --- Async utilities ---
    "anyio>=4.3.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[tool.ruff]
target-version = "py311"
line-length = 100
select = ["E", "F", "I", "UP", "ANN", "B", "SIM"]
ignore = ["ANN101", "ANN102"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
